--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ a{
     color: #2e2f42;
 }
 
+.footer-logo .logo-part {
+    color: #f4f4fd;
+}
+
 .nav-link {
     font-weight: 500;
     font-size: 16px;
@@ -49,5 +53,103 @@ a{
 .nav-link:focus,
 .contacts-link:hover,
 .contacts-link:focus {
-    color: #404bbf;
+    color: #404bbf; 
+}
+
+.section-service {
+    background-color: #2e2f42;
+}
+
+.section-service-text {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+}
+
+.section-service-button {
+width: 169px;
+height: 56px;
+background-color: #4d5ae5;
+font-size: 16px;
+line-height: 1.5;
+color: #fff;
+}
+
+.section-service-button:hover,
+.section-service-button:focus {
+    background-color: #404bbf;
+}
+
+.visually-hidden {
+    display: none;
+}
+
+.section-strategy-h {
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.section-strategy-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.section-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+
+
+
+.team-h {
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+
+.team-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+    text-transform: capitalize;
+}
+
+.portfolio-h {
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.portfolio-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.page-footer {
+    background-color: #434455;
+}
+
+.page-footer-p {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
 }
