--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,13 @@ a{
 }
 
 .section-service-button {
-width: 169px;
-height: 56px;
 background-color: #4d5ae5;
 font-size: 16px;
 line-height: 1.5;
 color: #fff;
+font-weight:500;
+letter-spacing: 0.04em;
+cursor: pointer;
 }
 
 .section-service-button:hover,
@@ -82,15 +83,13 @@ color: #fff;
     background-color: #404bbf;
 }
 
-.visually-hidden {
-    display: none;
-}
-
 .section-strategy-h {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    font-weight: 500;
+
 }
 
 .section-strategy-p {
@@ -109,7 +108,9 @@ color: #fff;
     text-transform: capitalize;
 }
 
-
+.team {
+    background-color: #f4f4fd;
+}
 
 .team-h {
     font-size: 20px;
@@ -118,6 +119,7 @@ color: #fff;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    font-weight: 500;
 }
 
 .team-p {
@@ -134,6 +136,7 @@ color: #fff;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    font-weight: 500;
 }
 
 .portfolio-p {
@@ -144,7 +147,7 @@ color: #fff;
 }
 
 .page-footer {
-    background-color: #434455;
+    background-color: #2e2f42;
 }
 
 .page-footer-p {
@@ -152,4 +155,8 @@ color: #fff;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+}
+
+.team-list {
+    background-color: #fff;
 }
